# openplayer

./: build.gradle  gradle.properties  jitpack.yml  open-player.aar  pom.xml  settings.gradle
OpenPlayer/: AndroidManifest.xml  build.gradle  project.properties
OpenPlayer/jni/decodefeed/: Log.h
OpenPlayer/jni/libvorbis-jni/: org_xiph_vorbis_decoderjni_VorbisDecoder.c
OpenPlayer/src/: CMakeLists.txt
OpenPlayer/src/com/audionowdigital/android/openplayer/: DataSource.java  ImplDecodeFeed.java  LogDebug.kt  Player.java  PlayerStates.java
OpenPlayer/src/org/xiph/vorbis/decoderjni/: VorbisDecoder.java
OpenPlayerDemo/: build.gradle  omni_demo.jks  proguard-rules.pro
OpenPlayerDemo/src/main/: AndroidManifest.xml
OpenPlayerDemo/src/main/java/com/audio/now/digital/openplayerdemo/: ApiService.kt  BaseApplication.java  ChatBotHeaderConnectInterceptor.kt  ChatBotHeaderInterceptor.kt  ChatBotHeaderRequestInterceptor.kt  DirectiveResponse.kt  MainActivity.java  MetaRequestStreamGPTRequest.kt  MetaStreamGPTRequest.kt  MetaStreamRequest.kt  ServiceImpl.kt
OpenPlayerDemo/src/main/java/com/audionowdigital/android/openplayerdemo/: ApiService.kt  ByteArrayMediaDataSource.kt  ChatBotHeaderConnectInterceptor.kt  ChatBotHeaderInterceptor.kt  ChatBotHeaderRequestInterceptor.kt  ChatViewController.kt  DirectiveResponse.kt  MainActivity.java  MetaRequestStreamGPTRequest.kt  MetaStreamGPTRequest.kt  MetaStreamRequest.kt  ServiceImpl.kt
OpenPlayerDemo/src/main/res/layout/: main.xml
OpenPlayerDemo/src/main/res/values/: strings.xml
OpenPlayerDemo/src/main/res/xml/: network_security_config.xml
gradle/wrapper/: gradle-wrapper.properties
mylibrary/: build.gradle
mylibrary/jni/decodefeed/: DecodeFeed.c  Log.h
mylibrary/src/com/audionowdigital/android/: MainActivity.java
mylibrary/src/com/audionowdigital/android/openplayer/: DataSource.java  ImplDecodeFeed.java  Player.java
mylibrary/src/net/pocketmagic/android/openmxplayer/: MXDecoder.java
openplayer/: build.gradle  proguard-rules.pro
openplayer/jni/decodefeed/: DecodeFeed.h  Log.h
openplayer/jni/libopus-jni/: OpusHeader.c  org_xiph_opus_decoderjni_OpusDecoder.c
openplayer/jni/libopus/celt/: celt_decoder.c  celt_encoder.c  stack_alloc.h
openplayer/jni/libopus/silk/: enc_API.c
openplayer/jni/libopus/silk/fixed/: noise_shape_analysis_FIX.c  pitch_analysis_core_FIX.c
openplayer/jni/libopus/src/: analysis.h  opus_decoder.c
openplayer/jni/libvorbis-jni/: org_xiph_vorbis_decoderjni_VorbisDecoder.c
openplayer/src/: CMakeLists.txt  build_jni.sh
openplayer/src/com/audionowdigital/android/openplayer/: DataSource.java  DecodeFeed.java  ImplDecodeFeed.java  LogDebug.kt  Player.java
openplayer/src/net/pocketmagic/android/openmxplayer/: MXDecoder.java
openplayer/src/org/xiph/opus/decoderjni/: OpusDecoder.java
